--- a/views/partials/dashboard.html
+++ b/views/partials/dashboard.html
@@ -1,1 +1,149 @@
-<h1>dashboard</h1>
+<header class="row">
+	<div class="col-md-4">
+		<div class="row">
+			<div class="col-md-6 end-md">
+				<img src="img/menu.jpg">
+			</div>
+			<div class="col-md-6">
+				<img class="logo-telefonica" src="img/telefonica2.png">
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+	</div>
+	<div class="col-md-4">
+		<div class="row" style="height: 100%;">
+			<div class="col-md-6">
+				<div class="name-header text-regular">
+					<img src="img/ico-persona.png"> Luigi Guerreros
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="name-header">
+					<img src="img/ico-siguiente.png">
+				</div>
+			</div>
+		</div>
+	</div>
+</header>
+<div class="row">
+	<div class="col-md-12 sub-header center-xs box-aligner">
+		<div class="box-aligner-item text-bold sub-header-text">
+			Bienvenido Administrador
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		<div class="row">
+			<div class="col-md-3"></div>
+			<div class="col-md-9 g-boxes">
+				<div class="center-xs icon-box box-aligner">
+					<div class="box-aligner-item">
+						<img class="my-icon" src="img/gestion.png">
+						<div class="icon-text text-regular">Gestión</div>
+					</div>
+				</div>
+				<div class="menu-gestiones">
+					<div class="item-gestiones first-item">
+						<div class="row">
+							<div class="col-md-3 start-xs">
+								<div class="text-gestion">
+									<div class="headline-bold title-gestion">Alta</div>
+									<div class="headline-bold title-gestion">Pura</div>
+									<br>
+									<div class="text-regular sub-title-gestion">Descripción</div>
+								</div>
+							</div>
+							<div class="col-md-6"></div>
+							<div class="col-md-1"></div>
+							<div class="col-md-2">
+								<img class="next-icon" src="img/ico-siguiente2.png">
+							</div>
+						</div>
+					</div>
+					<div class="item-gestiones second-item">
+						<div class="row">
+							<div class="col-md-3 start-xs">
+								<div class="text-gestion">
+									<div class="headline-bold title-gestion">Completa</div>
+									<div class="headline-bold title-gestion">Componente</div>
+									<br>
+									<div class="text-regular sub-title-gestion">Descripción</div>
+								</div>
+							</div>
+							<div class="col-md-6"></div>
+							<div class="col-md-1"></div>
+							<div class="col-md-2">
+								<img class="next-icon" src="img/ico-siguiente2.png">
+							</div>
+						</div>
+					</div>
+					<div class="item-gestiones third-item">
+						<div class="row">
+							<div class="col-md-3 start-xs">
+								<div class="text-gestion">
+									<div class="headline-bold title-gestion">Migración</div>
+									<br><br>
+									<div class="text-regular sub-title-gestion">Descripción</div>
+								</div>
+							</div>
+							<div class="col-md-6"></div>
+							<div class="col-md-1"></div>
+							<div class="col-md-2">
+								<img class="next-icon" src="img/ico-siguiente2.png">
+							</div>
+						</div>
+					</div>
+					<div class="item-gestiones last-item">
+						<div class="row">
+							<div class="col-md-3 start-xs box-aligner">
+								<div class="text-gestion">
+									<div class="headline-bold title-gestion">SVAS</div>
+									<br><br>
+									<div class="text-regular sub-title-gestion">Descripción</div>
+								</div>
+							</div>
+							<div class="col-md-6"></div>
+							<div class="col-md-1"></div>
+							<div class="col-md-2">
+								<img class="next-icon" src="img/ico-siguiente2.png">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-6">
+		<div class="row">
+			<div class="col-md-9 g-boxes">
+				<div class="center-xs icon-box box-aligner">
+					<div class="box-aligner-item">
+						<img class="my-icon" src="img/panel-control.png">
+						<div class="icon-text text-regular">Panel de Control</div>
+					</div>
+				</div>
+				<div class="menu-gestiones">
+					<div class="item-gestiones other-first-item">
+						<div class="row">
+							<div class="col-md-5 start-xs">
+								<div class="text-gestion">
+									<div class="headline-bold title-gestion">Administrador</div>
+									<div class="headline-bold title-gestion">de Categorías</div>
+									<br>
+									<div class="text-regular sub-title-gestion">Descripción</div>
+								</div>
+							</div>
+							<div class="col-md-4"></div>
+							<div class="col-md-1"></div>
+							<div class="col-md-2">
+								<img class="next-icon" src="img/ico-siguiente2.png">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
