--- a/views/partials/altapura.html
+++ b/views/partials/altapura.html
@@ -42,3 +42,58 @@
 		</div>
 	</center>
 </section>
+<article>
+<span class="titulogestion">Migraciones</span><a href=""><span class="botoncrear"><center class="crear">Crear</center></span></a> </br></br>
+	<table border="0" style="width:100%;table-layout:fixed;border-spacing:0;">
+		<tr>
+			<td class="camposhead bordeizquierda">Codigo</td>
+			<td class="camposhead">Origen</td>
+			<td class="camposhead">Campana</td>
+			<td class="camposhead">Zonal</td>
+			<td class="camposhead">Tipo</td>
+			<td class="camposhead">Subtipo</td>
+			<td class="camposhead">Paquete</td>
+			<td class="camposhead bordederecha">Nombre Paquete</td>
+		</tr>		
+		<tr>
+			<td class="margen">
+				AP0001
+			</td>
+			<td class="margen">
+				<select name="altapura" class="combo">
+					<option>Origen</option>
+				</select>
+			</td>
+			<td class="margen">
+				<select name="altapura" class="combo">
+					<option>Campana</option>
+				</select>
+			</td>
+			<td class="margen">
+				<select name="altapura" class="combo">
+					<option>Zonal</option>
+				</select>
+			</td>
+			<td class="margen">
+				<select name="altapura" class="combo">
+					<option>Tipo</option>
+				</select>
+			</td>
+			<td class="margen">
+				<select name="altapura" class="combo">
+					<option>Subtipo</option>
+				</select>
+			</td>
+			<td class="margen">
+				<select name="altapura" class="combo">
+					<option>Paquete</option>
+				</select>
+			</td>
+			<td class="margen">
+				<select name="altapura" class="combo">
+					<option>Nombre Paquete</option>
+				</select>
+			</td>
+		</tr>
+	</table>
+</article>
