--- a/views/partials/dashboard.html
+++ b/views/partials/dashboard.html
@@ -46,21 +46,23 @@
 				</div>
 				<div class="menu-gestiones">
 					<div class="item-gestiones first-item">
-						<div class="row">
-							<div class="col-md-3 start-xs">
-								<div class="text-gestion">
-									<div class="headline-bold title-gestion">Alta</div>
-									<div class="headline-bold title-gestion">Pura</div>
-									<br>
-									<div class="text-regular sub-title-gestion">Descripción</div>
+						<a href="/altapura">
+							<div class="row">
+								<div class="col-md-3 start-xs">
+									<div class="text-gestion">
+										<div class="headline-bold title-gestion">Alta</div>
+										<div class="headline-bold title-gestion">Pura</div>
+										<br>
+										<div class="text-regular sub-title-gestion">Descripción</div>
+									</div>
+								</div>
+								<div class="col-md-6"></div>
+								<div class="col-md-1"></div>
+								<div class="col-md-2">
+									<img class="next-icon" src="img/ico-siguiente2.png">
 								</div>
 							</div>
-							<div class="col-md-6"></div>
-							<div class="col-md-1"></div>
-							<div class="col-md-2">
-								<img class="next-icon" src="img/ico-siguiente2.png">
-							</div>
-						</div>
+						</a>
 					</div>
 					<div class="item-gestiones second-item">
 						<div class="row">
