--- a/views/partials/sva.html
+++ b/views/partials/sva.html
@@ -9,7 +9,7 @@
 <section>
 	<center>
 		<div class="opcion">
-			<span style="color:#2dedf7;">Alta Pura </span><img src="img/ico-encendido.png"> <span style="color:white;">Mono TV</span>
+			<span style="color:#2dedf7;">SVA </span><img src="img/ico-encendido.png"> <span style="color:white;">SVA TV</span>
 		</div>
 	</center>
 
@@ -43,7 +43,7 @@
 	</center>
 </section>
 <article>
-<span class="titulogestion">Alta Pura</span><a href=""><span class="botoncrear"><center class="crear">Crear</center></span></a> </br></br>
+<span class="titulogestion">SVA</span><a href=""><span class="botoncrear"><center class="crear">Crear</center></span></a> </br></br>
 	<table border="0" style="width:100%;table-layout:fixed;border-spacing:0;">
 		<tr>
 			<td class="camposhead bordeizquierda">Codigo</td>
