--- a/views/partials/categorias.html
+++ b/views/partials/categorias.html
@@ -1,1 +1,8 @@
-<h1>categorias</h1>
+<header>
+	<div class="cabecera">
+		<a href="dashboard"><img src="img/menu.jpg" style="position:absolute;"></a>
+		<img src="img/logotipo.png" style="position:absolute;left:20%;margin-top:1%;">
+		<span style="position:absolute;left:60%;margin-top:2%;color:white;"><img src="img/ico-persona.png" style="padding-right:10px;" >Luigi Guerreros  <b>Administrador</b></span>
+		<a href=""><img src="img/ico-siguiente.png" style="float:right;margin-top:2%;"></a>
+	</div>
+</header>
