subiendo combos con datos

--- a/views/partials/altapura.html
+++ b/views/partials/altapura.html
@@ -2,7 +2,7 @@
 	<div class="cabecera">
 		<a href="dashboard"><img src="img/menu.jpg" style="position:absolute;"></a>
 		<img src="img/logotipo.png" style="position:absolute;left:20%;margin-top:1%;">
-		<span style="position:absolute;left:60%;margin-top:2%;color:white;"><img src="img/ico-persona.png" style="padding-right:10px;" >Luigi Guerreros  <b>Administrador</b></span>
+		<span style="position:absolute;left:60%;margin-top:2%;color:white;"><img src="img/ico-persona.png" style="padding-right:10px;" >Jose Diaz  <b>Administrador</b></span>
 		<a href=""><img src="img/ico-siguiente.png" style="float:right;margin-top:2%;"></a>
 	</div>
 	</header>
@@ -19,24 +19,81 @@
 			<span>
 				<select name="filtro" class="filtro">
 					<option>Campana</option>
+					<option>Crecimiento</option>
+					<option>Digitalizacion</option>
+					<option>Iquitos</option>
+					<option>Masiva</option>
+					<option>Negocios</option>
+					<option>Pre-digitalizacion</option>
+					<option>Winback</option>
 				</select>
 				<select name="filtro" class="filtro">
 					<option>Zonal</option>
+					<option>HYO-CHB</option>
+					<option>LIMA</option>
+					<option>LIM-CHY-TRU-CUZ-ARE-PIU</option>
+					<option>LIM-CHY-TRU-CUZ-ARE-PIU-ICA</option>
+					<option>TODAS</option>
+					<option>NO APLICA</option>
 				</select>
 				<select name="filtro" class="filtro">
 					<option>Tipo</option>
+					<option>Mono</option>
+					<option>Duo</option>
+					<option>Trio</option>
 				</select>
 				<select name="filtro" class="filtro">
 					<option>Subtipo</option>
+					<option>Linea</option>
+					<option>Internet</option>
+					<option>Cable</option>
+					<option>TV</option>
 				</select>
 				<select name="filtro" class="filtro">
 					<option>Paquete</option>
+					<option>Control</option>
+					<option>Plana Local</option>
+					<option>Duo 1 MB</option>
+					<option>Duo 2 MB</option>
+					<option>Duo 4 MB</option>
+					<option>Duo 8 MB</option>
+					<option>Duo 10 MB</option>
+					<option>Duo 15 MB</option>
+					<option>Duo 30 MB</option>
+					<option>Duo 60 MB</option>
+					<option>Duo 100 MB</option>
+					<option>Duo Estandar</option>
+					<option>Trio 1 MB</option>
+					<option>Trio Hogar Digital</option>
+					<option>Trio 2 MB</option>
+					<option>Trio 4 MB</option>
+					<option>Trio 10 MB + Bloque HD</option>
+					<option>Trio 15 MB</option>
+					<option>Trio 20 MB</option>
+					<option>Trio 40 MB</option>
+					<option>Trio 60 MB</option>
+					<option>Trio 100 MB</option>
+					<option>Trio 6 MB</option>
+					<option>Trio 10 MB</option>
+
 				</select>
 				<select name="filtro" class="filtro">
 					<option>Tecnologia</option>
+					<option>ADSL</option>
+					<option>ADSL/ANALOGICO</option>
+					<option>ADSL/DIGITAL</option>
+					<option>ADSL/SATELITAL</option>
+					<option>DIGITAL</option>
+					<option>HFC</option>
+					<option>HFC/DIGITAL</option>
+					<option>SATELITAL</option>
+					<option>ANALOGICO</option>
 				</select>
 				<select name="filtro" class="filtro">
 					<option>Modo Pago</option>
+					<option>FINANCIADO</option>
+					<option>CONTADO</option>
+					<option>DIFERIDO</option>
 				</select>
 			</span>
 		</div>
@@ -62,36 +119,109 @@
 			<td class="margen">
 				<select name="altapura" class="combo">
 					<option>Origen</option>
+					<option>Mono Linea</option>
+					<option>Mono Cable</option>
+					<option>Duo TV</option>
+					<option>Duo Internet</option>
+
 				</select>
 			</td>
 			<td class="margen">
 				<select name="altapura" class="combo">
 					<option>Campana</option>
+					<option>Crecimiento</option>
+					<option>Digitalizacion</option>
+					<option>Iquitos</option>
+					<option>Masiva</option>
+					<option>Negocios</option>
+					<option>Pre-digitalizacion</option>
+					<option>Winback</option>
 				</select>
 			</td>
 			<td class="margen">
 				<select name="altapura" class="combo">
 					<option>Zonal</option>
+					<option>HYO-CHB</option>
+					<option>LIMA</option>
+					<option>LIM-CHY-TRU-CUZ-ARE-PIU</option>
+					<option>LIM-CHY-TRU-CUZ-ARE-PIU-ICA</option>
+					<option>TODAS</option>
+					<option>NO APLICA</option>
 				</select>
 			</td>
 			<td class="margen">
 				<select name="altapura" class="combo">
 					<option>Tipo</option>
+					<option>Mono</option>
+					<option>Duo</option>
+					<option>Trio</option>
 				</select>
 			</td>
 			<td class="margen">
 				<select name="altapura" class="combo">
 					<option>Subtipo</option>
+					<option>Linea</option>
+					<option>Internet</option>
+					<option>Cable</option>
+					<option>TV</option>
 				</select>
 			</td>
 			<td class="margen">
 				<select name="altapura" class="combo">
 					<option>Paquete</option>
+					<option>Plana Local</option>
+					<option>Duo Estandar</option>
+					<option>Duo 1MB</option>
+					<option>Duo 2MB</option>
+					<option>Duo 4MB</option>
+					<option>Duo 8MB</option>
+					<option>Duo 10MB</option>
+					<option>Duo 15MB</option>
+					<option>Duo 30MB</option>
+					<option>Duo 60MB</option>
+					<option>Duo 100MB</option>
 				</select>
 			</td>
 			<td class="margen">
 				<select name="altapura" class="combo">
 					<option>Nombre Paquete</option>
+					<option>Plan Control 250</option>
+					<option>Tarifa Plana Local 79</option>
+					<option>Duo Control 1 Mbps</option>
+					<option>Duo Plano Local 2 Mbps</option>
+					<option>Duo Plano Local 4 Mbps</option>
+					<option>Duo Plano Local 8 Mbps</option>
+					<option>Duo Plano Local 10 Mbps</option>
+					<option>Duo Plano Local 15 Mbps</option>
+					<option>Duo Plano Nacional 30 Mbps</option>
+					<option>Duo Plano Nacional 60 Mbps</option>
+					<option>Duo Plano Local 100 Mbps</option>
+					<option>Duo Plano Local Estandar Digital</option>
+					<option>Duo Plano Local Estandar</option>
+					<option>Duo Plano Local Estandar DTH</option>
+					<option>Trio Control 1 Mbps Estandar DTH</option>
+					<option>Trio Plano Local 2 Mbps Hogar Digital</option>
+					<option>Trio Plano Local 2 Mbps Hogar Digital DTH</option>
+					<option>Trio Plano Local 2 Mbps Estandar Digital</option>
+					<option>Trio Plano Local 2 Mbps Estandar</option>
+					<option>Trio Plano Local 2 Mbps Estandar DTH</option>
+					<option>Trio Plano Local 4 Mbps Estandar Digital</option>
+					<option>Trio Plano Local 4 Mbps Estandar</option>
+					<option>Trio Plano Local 4 Mbps Estandar DTH</option>
+					<option>Trio Plano Local 10 Mbps Estandar Digital</option>
+					<option>Trio Plano Local 10 Mbps Estandar DTH</option>
+					<option>Trio Plano Local 15 Mbps Estandar Digital</option>
+					<option>Trio Plano Local 15 Mbps Estandar DTH</option>
+					<option>Trio Plano Local 20 Mbps Estandar Digital</option>
+					<option>Trio Plano Local 20 Mbps Estandar DTH</option>
+					<option>Trio Plano Local 40 Mbps Estandar Digital</option>
+					<option>Trio Plano Local 60 Mbps Estandar Digital</option>
+					<option>Trio Plano Local 100 Mbps Estandar Digital</option>
+					<option>Trio Plano Local 6 Mbps Estandar Digital</option>
+					<option>Trio Plano Local 6 Mbps Estandar</option>
+					<option>Trio Plano Local 6 Mbps Estandar DTH</option>
+					<option>Trio Plano Local 10 Mbps Estandar Digital</option>
+					<option>Trio Plano Local 10 Mbps Estandar DTH</option>
 				</select>
 			</td>
 		</tr>
