--- a/views/partials/svatv.html
+++ b/views/partials/svatv.html
@@ -2,7 +2,7 @@
 	<div class="cabecera">
 		<a href="dashboard"><img src="img/menu.jpg" style="position:absolute;"></a>
 		<img src="img/logotipo.png" style="position:absolute;left:20%;margin-top:1%;">
-		<span style="position:absolute;left:60%;margin-top:2%;color:white;"><img src="img/ico-persona.png" style="padding-right:10px;" >Luigi Guerreros  <b>Administrador</b></span>
+		<span style="position:absolute;left:60%;margin-top:2%;color:white;"><img src="img/ico-persona.png" style="padding-right:10px;" >Jose Diaz  <b>Administrador</b></span>
 		<a href=""><img src="img/ico-siguiente.png" style="float:right;margin-top:2%;"></a>
 	</div>
 	</header>
